--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -34,7 +34,7 @@
 }
 
 .home-container .logo .hover-show.active {
-  animation: showspin 8s linear 1s infinite;
+  animation: showspin 10s linear 0.1s infinite;
 }
 
 @keyframes showspin {
@@ -102,14 +102,8 @@
   background-size: cover;
   background-position: center;
 }
+
 .home-container .logo .hover-show.active .circle:nth-child(7) {
-  position: absolute;
-  transform: translateX(-210%);
-  background: url(../props/c-plus-plus.png);
-  background-size: cover;
-  background-position: center;
-}
-.home-container .logo .hover-show.active .circle:nth-child(8) {
   position: absolute;
   transform: translateX(-150%) translateY(-150%);
   background: url(../props/python.jpg);
@@ -117,7 +111,7 @@
   background-position: center;
 }
 
-.home-container .logo .hover-show.active .circle:nth-child(9) {
+.home-container .logo .hover-show.active .circle:nth-child(8) {
   position: absolute;
   transform: translateX(-210%);
   background: url(../props/node.jpg);
@@ -132,7 +126,7 @@
   width: 300px;
   border-radius: 50%;
   border: 3px solid rgb(108, 161, 197);
-  transform: translate(-200px);
+  transform: translateY(200px);
   opacity: 0;
   animation: fade-in 1s ease 1 0.5s forwards;
 }
