--- a/src/components/qualifications/qualifications.css
+++ b/src/components/qualifications/qualifications.css
@@ -47,50 +47,52 @@
 .qualifications-container .qualification .content.html {
   background: rgba(255, 255, 255, 0.103) url(../props/html.png);
   background-position: center;
-  background-size: 66px;
 }
 .qualifications-container .qualification .content.css {
   background: rgba(255, 255, 255, 0.103) url(../props/css.png);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 66px;
 }
 .qualifications-container .qualification .content.javascript {
   background: rgba(255, 255, 255, 0.103) url(../props/js.jpg);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 90px;
 }
 .qualifications-container .qualification .content.bootstrap {
   background: rgba(255, 255, 255, 0.103) url(../props/bootstrap.png);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 66px;
 }
 .qualifications-container .qualification .content.react {
   background: rgba(255, 255, 255, 0.103) url(../props/react.png);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 66px;
 }
-.qualifications-container .qualification .content.c-plus-plus {
-  background: rgba(255, 255, 255, 0.103) url(../props/c-plus-plus.png);
+.qualifications-container .qualification .content.nestjs {
+  background: rgba(255, 255, 255, 0.103) url(../props/nestjs.png);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 66px;
 }
-.qualifications-container .qualification .content.c-sharp {
-  background: rgba(255, 255, 255, 0.103) url(../props/c-sharp.png);
+
+.qualifications-container .qualification .content.python {
+  background: rgba(255, 255, 255, 0.103) url(../props/python.jpg);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 66px;
 }
-.qualifications-container .qualification .content.kotlin {
-  background: rgba(255, 255, 255, 0.103) url(../props/kotlin.png);
+
+.qualifications-container .qualification .content.node {
+  background: rgba(255, 255, 255, 0.103) url(../props/node.jpg);
   background-position: center;
+  background-size: 100%;
   background-size: cover;
-  background-size: 66px;
 }
+
 
 @media (max-width: 820px) {
   .quali-text {
