--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -115,6 +115,59 @@
   left: 0;
 }
 
+.button-container .btn.neon {
+  position: relative;
+  padding: 10px;
+  color: var(--color-pri);
+  text-transform: capitalize;
+  text-align: center;
+  font-size: 18px;
+  transition: 0.3s;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0003);
+  box-shadow: 0 0 12px var(--color-pri-light);
+}
+
+.button-container .btn.neon:hover {
+  background-color: var(--color-pri);
+  color: #111;
+  box-shadow: 0 0 50px var(--color-pri);
+  transition-delay: 0.2s;
+}
+
+.button-container .btn.neon::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid var(--color-pri);
+  border-left: 2px solid var(--color-pri);
+  transition: 0.3s;
+}
+.button-container .btn.neon:hover:before {
+  width: 100%;
+  height: 100%;
+}
+
+.button-container .btn.neon::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 10px;
+  height: 10px;
+  border-bottom: 2px solid var(--color-pri);
+  border-right: 2px solid var(--color-pri);
+  transition: 0.3s;
+}
+.button-container .btn.neon:hover::after {
+  width: 100%;
+  height: 100%;
+}
+
+
+
 @media (max-width: 820px) {
   .button-container {
     position: relative;
