--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -49,4 +49,13 @@
   height: 220px;
   width: 250px;
   border-radius: 10%;
+  display: none;
+}
+
+.container .card .imgBx .icon {
+  max-width: 100%;
+  height: 200px;
+  width: 200px;
+  border-radius: 10%;
+  fill: var(--color-pri);
 }
