--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -54,6 +54,7 @@
   align-items: center;
   transition: 0.2s ease;
   opacity: 0;
+  box-shadow: 0 0 12px var(--color-pri);
 }
 
 .home-container .logo .hover-show.active .circle {
@@ -61,7 +62,7 @@
 }
 
 .home-container .logo .hover-show.active .circle:nth-child(1) {
-  background: url(../props/html.png);
+  /* background: url(../props/html.png); */
   background-size: cover;
   background-position: center;
   position: absolute;
@@ -70,35 +71,35 @@
 .home-container .logo .hover-show.active .circle:nth-child(2) {
   position: absolute;
   transform: translateX(150%) translateY(-150%);
-  background: url(../props/css.png);
+  /* background: url(../props/css.png); */
   background-size: cover;
   background-position: center;
 }
 .home-container .logo .hover-show.active .circle:nth-child(3) {
   position: absolute;
   transform: translateX(210%);
-  background: url(../props/js.jpg);
+  /* background: url(../props/js.jpg); */
   background-size: cover;
   background-position: center;
 }
 .home-container .logo .hover-show.active .circle:nth-child(4) {
   position: absolute;
   transform: translateX(150%) translateY(150%);
-  background: url(../props/bootstrap.png);
+  /* background: url(../props/bootstrap.png); */
   background-size: cover;
   background-position: center;
 }
 .home-container .logo .hover-show.active .circle:nth-child(5) {
   position: absolute;
   transform: translateY(210%);
-  background: url(../props/react.png);
+  /* background: url(../props/react.png); */
   background-size: cover;
   background-position: center;
 }
 .home-container .logo .hover-show.active .circle:nth-child(6) {
   position: absolute;
   transform: translateX(-150%) translateY(150%);
-  background: url(../props/nestjs.png);
+  /* background: url(../props/nestjs.png); */
   background-size: cover;
   background-position: center;
 }
@@ -106,7 +107,7 @@
 .home-container .logo .hover-show.active .circle:nth-child(7) {
   position: absolute;
   transform: translateX(-210%);
-  background: url(../props/node.jpg);
+  /* background: url(../props/node.jpg); */
   background-size: cover;
   background-position: center;
 }
@@ -114,7 +115,7 @@
 .home-container .logo .hover-show.active .circle:nth-child(8) {
   position: absolute;
   transform: translateX(-150%) translateY(-150%);
-  background: url(../props/python.jpg);
+  /* background: url(../props/python.jpg); */
   background-size: cover;
   background-position: center;
 }
