--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -41,8 +41,8 @@
 }
 
 .navigation .icon:hover {
-  fill: rgba(88, 117, 248, 0.151);
-  border: 2px solid rgba(88, 117, 248, 0.192);
+  fill: rgb(88, 117, 248);
+  border: 2px solid rgb(88, 117, 248);
 }
 
 .navigation .icon.active-nav:hover {
