--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -10,6 +10,7 @@
   box-shadow: 0 0.5px 16px #014355;
   transition: 0.3s ease-in-out;
   border-radius: 15px;
+  align-items: center;
 }
 
 .container .card .content {
