--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -48,30 +48,35 @@
   background: rgba(255, 255, 255, 0.103) url(../props/html.png);
   background-position: center;
 }
+
 .skills-container .qualification .content.css {
   background: rgba(255, 255, 255, 0.103) url(../props/css.png);
   background-position: center;
   background-size: 100%;
   background-size: cover;
 }
+
 .skills-container .qualification .content.javascript {
   background: rgba(255, 255, 255, 0.103) url(../props/js.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
 }
+
 .skills-container .qualification .content.bootstrap {
   background: rgba(255, 255, 255, 0.103) url(../props/bootstrap.png);
   background-position: center;
   background-size: 100%;
   background-size: cover;
 }
+
 .skills-container .qualification .content.react {
   background: rgba(255, 255, 255, 0.103) url(../props/react.png);
   background-position: center;
   background-size: 100%;
   background-size: cover;
 }
+
 .skills-container .qualification .content.nestjs {
   background: rgba(255, 255, 255, 0.103) url(../props/nestjs.png);
   background-position: center;
@@ -93,6 +98,10 @@
   background-size: cover;
 }
 
+.swiper-3d .swiper-slide-shadow-left,
+.swiper-3d .swiper-slide-shadow-right {
+  background-image: none !important;
+}
 
 @media (max-width: 820px) {
   .quali-text {
@@ -153,7 +162,7 @@
   .skills-container {
     position: absolute;
     display: flex;
-    justify-content: flex-start ;
+    justify-content: flex-start;
     align-items: center;
     height: 80%;
     width: 85%;
