--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -13,6 +13,7 @@
   border-radius: 50px;
   opacity: 0;
   animation: fade-nav-in 1s ease 1 1s forwards;
+  z-index: 99999;
 }
 
 @keyframes fade-nav-in {
