--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   justify-content: space-around;
-  margin-top: 80px;
+  margin-top: 15px;
   width: 100%;
   padding: 12px;
   /* background-color: red; */
@@ -20,7 +20,13 @@
   align-content: space-between;
   justify-content: center;
   padding: 12px;
-  width: 100vh;
+  width: 80%;
+  border: 2px solid #300458;
+  max-height: 650px;
+  overflow-x: hidden;
+  border-radius: 15px;
+  overflow-y: scroll;
+  box-shadow: 0 0 8px var(--color-pri);
 }
 
 .title {
